...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="1.5dip"
        tools:src="@drawable/loadimage" />

    <TextView
        android:id="@+id/tv_name_tv_show_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/mbold"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_tv_show_detail"
        app:layout_constraintTop_toTopOf="@+id/img_tv_show_detail"
        tools:text="Arrow" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
...
