<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movies_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232123">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        shimmer:duration="800">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
            <include layout="@layout/item_row_placeholder" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        tools:listitem="@layout/item_row"/>

</FrameLayout>